# Pause_Empathique

./: .env.ci  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  COPILOT_CONTEXT.md  Dockerfile  README.md  manage.py  package-lock.json  pyproject.toml  start-django.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: project-management.md  test-plan-pauses-api.md
docs/sessions/: next-session.md  session-log.md
pause_empathique/: settings.py  urls.py
pause_empathique/api/: urls.py
pauses/: admin.py  models.py  start-django.sh  urls.py  views.py
pauses/api/: serializers.py
pauses/fixtures/: needs.json
pauses/migrations/: 0004_alter_pause_options.py  0005_alter_pause_observation.py  0006_alter_pause_feelings_alter_pause_needs.py
pauses/tests/: test_api_pauses.py  test_serializers.py
static/css/: input.css  output.css
static/js/: keep-toggle-open-and-display-selected-items.js  show-and-hide-password.js
templates/: base.html  header.html
templates/partials/: field_errors.html  non_field_errors.html
templates/pauses/: _desktop_diary.html  dashboard.html  diary.html  feelings.html  needs.html  observation.html  pause_detail.html  pause_update.html
templates/users/: login.html  profile_delete.html  profile_detail.html  profile_update.html  register.html
tests/: test_models.py  test_views.py
users/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
users/api/: auth_urls.py  serializers.py  user_urls.py  views.py
users/templatetags/: text_color_filters.py
users/tests/: test_api_auth.py
