[project]
name = "pause-empathique"
version = "0.1.0"
description = ""
authors = [
    {name = "Pressense Fasani",email = "camillefasani@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "user-agents (>=2.2.0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise[brotli] (>=6.11.0,<7.0.0)",
]

[tool.poetry]
packages = [{include = "pause_empathique", from = "src"}]


[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.18.0"
ruff = "0.13.2"
pytest = "^9.0.2"
pytest-django = "^4.12.0"
pytest-cov = "^7.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".eggs",
    ".git",
    ".venv",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear (bugs potentiels)
    "S",   # flake8-bandit (sécurité)
]
ignore = ["S101"]  # autorise les assert (utiles dans les tests)

[tool.ruff.format]
# Compatible avec Black par défaut
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pause_empathique.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests", "pauses", "users"]
addopts = "-ra"
